--- a/.drone.yaml
+++ b/.drone.yaml
@@ -32,6 +32,7 @@ steps:
   - name: tmp
     path: /tmp
   commands:
+  - mkdir -p /data/staticdata
   - python3 /opt/eve-echoes-tools/scripts/dump_static_data.py /tmp/eve.xapk /data/staticdata
 
 - name: extract_npk
@@ -42,9 +43,10 @@ steps:
   - name: tmp
     path: /tmp
   commands:
+  - mkdir -p /tmp/npk
   - unzip /tmp/eve.xapk -d /tmp/eve.xapk
-  - unzip /tmp/eve.xapk/Android/obb/com.netease.eve.en/com.netease.eve.en.obb /tmp/obb
-  - mv /tmp/obb/*.npk /data/npk
+  - unzip /tmp/eve.xapk/Android/obb/com.netease.eve.en/com.netease.eve.en.obb /tmp/npk
+  - mv /tmp/npk/*.npk /data/npk
 
 - name: clone_npk_tool
   image: alpine/git
@@ -57,6 +59,7 @@ steps:
   - name: data
     path: /data
   commands:
+  - mkdir -p /data/ktx
   - cargo install --path .
   - npktool x /data/npk/*.npk
   - mv out /data/ktx
