--- a/.drone.yaml
+++ b/.drone.yaml
@@ -41,9 +41,9 @@ steps:
     path: /tmp
   commands:
   - mkdir -p /tmp/npk
-  - mkdir -p /tmp/eve.xapk
-  - unzip /tmp/eve.xapk -d /tmp/eve.xapk
-  - unzip /tmp/eve.xapk/Android/obb/com.netease.eve.en/com.netease.eve.en.obb /tmp/npk
+  - mkdir -p /tmp/eve
+  - unzip /tmp/eve.xapk -d /tmp/eve
+  - unzip /tmp/eve/Android/obb/com.netease.eve.en/com.netease.eve.en.obb /tmp/npk
   - mv /tmp/npk/*.npk /data/npk
 
 - name: clone_npk_tool
