--- a/.drone.yaml
+++ b/.drone.yaml
@@ -41,8 +41,8 @@ steps:
   - mkdir -p /tmp/npk
   - mkdir -p /tmp/eve
   - unzip /tmp/eve.xapk -d /tmp/eve
-  - unzip /tmp/eve/Android/obb/com.netease.eve.en/main.57.com.netease.eve.en.obb /tmp/npk
-  - mv /tmp/npk/main.57.com.netease.eve.en/*.npk /data/npk
+  - unzip /tmp/eve/Android/obb/com.netease.eve.en/main.57.com.netease.eve.en.obb
+  - mv /tmp/eve/Android/obb/com.netease.eve.en/main.57.com.netease.eve.en/*.npk /data/npk
 
 - name: clone_npk_tool
   image: alpine/git
