--- a/.drone.yaml
+++ b/.drone.yaml
@@ -44,7 +44,7 @@ steps:
   - mkdir -p /tmp/eve
   - unzip /tmp/eve.xapk -d /tmp/eve
   - unzip /tmp/eve/Android/obb/com.netease.eve.en/main.57.com.netease.eve.en.obb
-  - find /tmp/eve/Android/obb/com.netease.eve.en -type f -name "*.npk" -exec mv {} /data/npk \;
+  - mv /tmp/eve/Android/obb/com.netease.eve.en/main.57.com.netease.eve.en/*.npk /data/npk
 
 - name: clone_npk_tool
   image: alpine/git
